Added session auth and admin ui
